# minRVC

./: .eslintrc.cjs  .gitignore  .mise.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
.tsbuildinfo-node/: tsconfig.node.tsbuildinfo
docs/: ARCHITECTURE.md  AUDIO-PROCESSING.md  MODELS.md  PACKAGING-WINDOWS.md  PROTOCOL.md  STUDIOONE-OBS.md  VB-CABLE.md
models/: .gitkeep
scripts/: generate_icons.py
sidecar/: README.md  build_sidecar.py  pyproject.toml  requirements.txt
sidecar/rvc_engine/: __init__.py  config.py  f0_extract.py  feature_extract.py  inference.py  model_loader.py  pipeline.py  separate.py  server.py  shm_transport.py  sola.py  train.py  vad.py
sidecar/scripts/: setup_rvc.py
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: capture.rs  devices.rs  engine.rs  mod.rs  output.rs  ring.rs  send_stream.rs
src-tauri/src/audio/dsp/: denoise.rs  mod.rs  processor.rs  state.rs  vad.rs
src-tauri/src/commands/: audio_cmds.rs  dsp_cmds.rs  engine_cmds.rs  mod.rs  model_cmds.rs  separation_cmds.rs  training_cmds.rs
src-tauri/src/ipc/: mod.rs  shm_ring.rs  ws_client.rs
src-tauri/src/sidecar/: manager.rs  mod.rs
src/app/: index.tsx  styles.module.css
src/components/audio-meter/: index.tsx  styles.module.css
src/components/custom-voice-form/: index.tsx  styles.module.css
src/components/device-selector/: index.tsx  styles.module.css
src/components/dsp-panel/: index.tsx  styles.module.css
src/components/help-panel/: index.tsx  styles.module.css
src/components/language-switcher/: index.tsx  styles.module.css
src/components/live-toggle/: index.tsx  styles.module.css
src/components/pitch-control/: index.tsx  styles.module.css
src/components/realtime-settings/: index.tsx  styles.module.css
src/components/separation-panel/: index.tsx  (+1 more)
src/constants/: voices.ts
src/hooks/: use-app-store.ts  use-audio-devices.ts  use-dsp.ts  use-engine.ts  use-separation.ts  use-theme.ts  use-training.ts  use-voice-models.ts
src/i18n/: en.ts  index.ts  zh-cn.ts
src/styles/: global.css  variables.css
src/types/: index.ts
src/utils/: format.ts  tauri-api.ts
(+8 files in other folders)
